feat(srv): adding Quote entity

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:mysql://localhost:33062/spiral?charcterEncoding=utf8&useUnicode=true&serverTimezone=UTC
     username: root
     password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
