--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,6 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: update
+#      ddl-auto: update
+  liquibase:
+    change-log: classpath:db/db.changelog-master.xml
