--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.6</version>
+		</dependency>
 
 
 		<!-- Test -->
