--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: password
   liquibase:
     change-log: classpath:db/db.changelog-master.xml
+    enabled: false
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 springdoc:
   api-docs:
